Fix landing page and hide metadata on small screens and collapse guide sidebar (#70)
* Fix landing page paragraph and hide blog post metadata on small screens

* Collapse sidebar guide sections

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -69,7 +69,9 @@ small {
     .img-amber-logo {
         display: none !important;
     }
-    .h-full > div > p {
+    .post-date,
+    .post-author,
+    .post-author-avatar {
         display: none !important;
     }
 }
